Fixed mud-dialog-content overflow

--- a/src/Client/wwwroot/css/fsh.css
+++ b/src/Client/wwwroot/css/fsh.css
@@ -48,7 +48,6 @@
 
 .mud-dialog-content {
     max-height: 75vh !important;
-    overflow: auto !important;
 }
 
 .mud-grid-spacing-xs-3 {
